--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -9,12 +9,25 @@
 
 /* Medium Devices, Desktops */
 @media only screen and (max-width : 992px)
-	/**/
+	.portfolio
+		.fon
+			background-size: 212%
+			.box
+				padding: 37% 0 53%
 
 
 /* Small Devices, Tablets */
-@media only screen and (max-width : 768px)
-	/**/
+@media only screen and (max-width : 767px)
+	nav.navbar
+		.navbar-collapse
+			ul.nav.navbar-nav
+				li
+					display: block
+		.navbar-toggle
+			background: none
+			border: none
+			.icon-bar
+				background-color: #fff
 
 
 /* Extra Small Devices, Phones */
