--- a/app/sass/_content.sass
+++ b/app/sass/_content.sass
@@ -14,7 +14,7 @@ h2
 	color: #000
 	line-height: 0.4
 	margin: 0
-	margin: 50px 0 25px
+	margin: 50px 0 15px
 	.fa
 		font-size: 60px
 		text-shadow: 3px 1px 2px rgba(0, 0, 0, 0.7)
@@ -26,31 +26,30 @@ h2
 		font-weight: 200
 		text-justify: auto
 		text-align: center
-		max-width: 600px
+		max-width: 700px
 		margin: auto
 		line-height: 1.4
 .uslugi
-	ul
-		li
-			text-align: center
-			color: #fff
-			font-size: 25px
-			font-weight: 200
-			max-width: 700px
-			padding: 15px 0
-			margin: auto
+	table
+		border-bottom: 1px solid #ddd
+		tr
+			td
+				color: #fff
+				font-size: 25px
+				font-weight: 200
+				padding: 15px 0
+				margin: auto
 .portfolio
 	.fon
 		background: url('../img/portfolio.jpg') no-repeat
-		height: 1353px
 		background-position: top center
 		.box
 			max-width: 1125px
 			margin: auto
-			padding-top: 270px
+			padding: 270px 0 420px
 			.fotorama
 				.slide
-					width: 650px
+					width: 57%
 					margin: auto
 					.col-xs-6
 						margin-bottom: 30px
